--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,17 +86,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <!-- server address -->
-        <meta-data
-            android:name="ServerAddress"
-            android:value="${NICELY_VALUE}" />
+        <!--<meta-data-->
+            <!--android:name="ServerAddress"-->
+            <!--android:value="${NICELY_VALUE}" />-->
 
-        <!-- your vid getString must "\ " -->
-        <meta-data
-            android:name="vid"
-            android:value="${VID}" />
-        <meta-data
-            android:name="vkey"
-            android:value="${VKEY}" />
+        <!--&lt;!&ndash; your vid getString must "\ " &ndash;&gt;-->
+        <!--<meta-data-->
+            <!--android:name="vid"-->
+            <!--android:value="${VID}" />-->
+        <!--<meta-data-->
+            <!--android:name="vkey"-->
+            <!--android:value="${VKEY}" />-->
 
         <activity
             android:name=".SmartcallActivity"
