多渠道包打包

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
-
+//多渠道包
+apply plugin: 'packer'
 
 def releaseTime() {
     return new Date().format("yyyyMMddHHmm")
@@ -11,27 +11,14 @@ def getPackageName() {
     return "JiafeigouPlayer"
 }
 //从version.properties中读取versionName
-def getCustomVersionName() {
-    Properties properties = new Properties()
-    File localProperties = project.rootProject.file('version.properties')
-    if (localProperties.exists())
-        properties.load(localProperties.newDataInputStream())
-    return properties.getProperty('versionName')
-}
-
-//从version.properties中读取versionCode
-def int getCustomVersionCode() {
-    Properties properties = new Properties()
-    File localProperties = project.rootProject.file('version.properties')
-    if (localProperties.exists())
-        properties.load(localProperties.newDataInputStream())
-    def versionCode = properties.getProperty('versionCode').toInteger()
-    return versionCode
-}
-
-def getVariantShortName(String name) {
-    return name.replace("Release", "").replace("_", "-").replace("Debug", "")
-}
+def vCode
+def vName
+Properties p = new Properties()
+File lp = project.rootProject.file('version.properties')
+if (lp.exists())
+    p.load(lp.newDataInputStream())
+vName = p.getProperty('versionName')
+vCode = p.getProperty('versionCode').toString().toInteger()//要转化成int
 
 def boolean hasSignKey() {
     Properties properties = new Properties()
@@ -43,17 +30,9 @@ def boolean hasSignKey() {
     }
     return false
 }
-//目前只有中性release版，包名
-def getPackageSuffix(String variantName) {
-    if (variantName.contains("zhongxing"))
-        return "zhongxing"
-    return ""
-}
 
 
 android {
-    def vCode = getCustomVersionCode()
-    def vName = getCustomVersionName()
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -71,7 +50,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
             // 设置支持的SO库架构
-            abiFilters 'armeabi-v7a', 'x86'//, 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+            abiFilters 'armeabi-v7a'//, 'x86'//, 'armeabi-v7a', 'x86_64', 'arm64-v8a'
         }
 
     }
@@ -105,9 +84,14 @@ android {
 
     signingConfigs {
         debug {
-
+            v2SigningEnabled false
         }
         release {
+            // 满足下面两个条件时需要此配置
+            // 1. Gradle版本 >= 2.14.1
+            // 2. Android Gradle Plugin 版本 >= 2.2.0
+            // 作用是只使用旧版签名，禁用V2版签名模式
+            v2SigningEnabled false
             Properties properties = new Properties()
             File localProperties = project.rootProject.file('local.properties')
             if (localProperties.exists()) {
@@ -127,28 +111,6 @@ android {
     }
     buildTypes {
         debug {
-//            signingConfig signingConfigs.debug
-
-            applicationVariants.all { variant ->
-                //调整包名
-                applicationIdSuffix = getPackageSuffix(variant.name)
-                variant.outputs.each { output ->
-                    def outputFile = output.outputFile
-                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                        def shortName = getVariantShortName(variant.name)
-                        def fileName = "${getPackageName()}" +
-                                "-${vName}" +
-                                ".${vCode}" +
-//                                "-${releaseTime()}" +
-                                shortName
-                        if (outputFile.name.contains("debug")) {
-                            fileName = fileName +
-                                    "-debug.apk"
-                            output.outputFile = new File(outputFile.parent, fileName)
-                        }
-                    }
-                }
-            }
         }
         release {
             if (hasSignKey()) {
@@ -157,49 +119,29 @@ android {
                 zipAlignEnabled true
                 proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
                 signingConfig signingConfigs.release
-                applicationVariants.all { variant ->
-                    //调整包名
-                    applicationIdSuffix = getPackageSuffix(variant.name)
-                    variant.outputs.each { output ->
-                        def outputFile = output.outputFile
-                        if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                            def shortName = getVariantShortName(variant.name)
-                            def fileName = "${getPackageName()}" +
-                                    "-${vName}" +
-                                    ".${vCode}" +
-                                    "-${releaseTime()}" +
-                                    shortName
-                            //需要release包的variant
-//                        boolean condition = getReleaseCondition(variant.name)
-                            if (outputFile.name.contains("release")) {
-                                fileName = fileName +
-                                        "-release.apk"
-                                output.outputFile = new File(outputFile.parent, fileName)
-                            }
-
-                        }
-                    }
-                }
             }
         }
     }
 
 
     productFlavors {
-        _test1 {
-            applicationIdSuffix ".test1"
-            //vid vkey已经搬到Security.java
-        }
 
         _yun {
+            //vid vkey已经搬到Security.java
             //官方运营
+            versionName vName
+            versionCode vCode
         }
         _yf {
             applicationIdSuffix ".yf"
+            versionName vName
+            versionCode vCode
         }
         //中性包
         _zhongxing {
             applicationIdSuffix ".zhongxing"
+            versionName vName
+            versionCode vCode
         }
     }
 }
@@ -256,8 +198,7 @@ dependencies {
     compile files('libs/open_sdk_r5756.jar')
     compile files('libs/weiboSDKCore_3.1.4.jar')
     compile files('libs/zxing.jar')
-    debugCompile files('src/main/jniLibs/jfg-debug-support.jar')
-    releaseCompile files('src/main/jniLibs/jfg-release-support.jar')
+    compile files('libs/zbar.jar')
     compile files('libs/libammsdk-3.1.1.jar')
     //其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.1.5
     compile rootProject.ext.buglySdk
@@ -266,7 +207,6 @@ dependencies {
     debugCompile rootProject.ext.leakcanaryAndroid
     releaseCompile rootProject.ext.leakcanaryAndroidNoOp
     testCompile rootProject.ext.leakcanaryAndroidNoOp
-    compile files('src/main/jniLibs/zbar.jar')
     //add by hunt 2016-08-01
     compile rootProject.ext.switchButton
     //glide
@@ -283,5 +223,10 @@ dependencies {
 //    https://github.com/cylankj/JFGAndroid-Ext.git
     compile 'com.cylan.ext:annotations:0.0.3'
     annotationProcessor 'com.cylan.ext:processor:0.0.3'
+    //
+    debugCompile 'com.cylan.ext:optdebug:0.0.1'
+    releaseCompile 'com.cylan.ext:optrelease:0.0.1'
+    //渠道包
+    compile 'com.mcxiaoke.gradle:packer-helper:1.0.8'
 }
 
