--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ buildscript {
         // in the individual module build.gradle files
         classpath 'com.mcxiaoke.gradle:packer-ng:1.0.7'
         classpath 'me.tatarka:gradle-retrolambda:3.4.0'
-
+        //多渠道包
+        classpath 'com.mcxiaoke.gradle:packer-ng:1.0.8'
     }
 }
 
