--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,57 +16,56 @@
         android:xlargeScreens="true" />
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <!--<uses-permission android:name="android.permission.RESTART_PACKAGES"/>-->
-    <!--该应用程序使用该设备的摄像头。如果设备支持多个摄像头，应用程序使用相机，面对从屏幕上移开-->
+    <!-- <uses-permission android:name="android.permission.RESTART_PACKAGES"/> -->
+    <!-- 该应用程序使用该设备的摄像头。如果设备支持多个摄像头，应用程序使用相机，面对从屏幕上移开 -->
     <uses-feature android:name="android.hardware.camera" />
-    <!--子功能。该应用程序使用设备相机的自动对焦能力。-->
+    <!-- 子功能。该应用程序使用设备相机的自动对焦能力。 -->
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <!--该应用程序使用设备上的麦克风。-->
+    <!-- 该应用程序使用设备上的麦克风。 -->
     <uses-feature android:name="android.hardware.microphone" />
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <!--读取系统底层日志-->
+    <!-- 读取系统底层日志 -->
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <!--应用程序使用802.11网络（WIFI）功能的设备上的。-->
+    <!-- 应用程序使用802.11网络（WIFI）功能的设备上的。 -->
     <uses-feature android:name="android.hardware.wifi" />
 
-    <!--改变WiFi多播状态-->
+    <!-- 改变WiFi多播状态 -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
 
-    <!--<uses-permission android:name="android.permission.GET_TASKS"/>-->
+    <!-- <uses-permission android:name="android.permission.GET_TASKS"/> -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
-    <!--允许程序不通过拨号界面拨打电话-->
-    <!--<uses-permission android:name="android.permission.CALL_PHONE" />-->
-    <!--允许程序读取用户联系人数据-->
+    <!-- 允许程序不通过拨号界面拨打电话 -->
+    <!-- <uses-permission android:name="android.permission.CALL_PHONE" /> -->
+    <!-- 允许程序读取用户联系人数据 -->
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <!--写入联系人，但不可读取-->
-    <!--<uses-permission android:name="android.permission.WRITE_CONTACTS" />-->
-    <!--允许程序访问手机状态信息-->
-    <!--<uses-permission android:name="android.permission.READ_PHONE_STATE" />-->
-    <!--<uses-permission android:name="android.permission.RECEIVE_SMS"/>-->
-    <!--<uses-permission android:name="android.permission.READ_SMS"/>-->
-    <!--<uses-permission android:name="android.permission.SEND_SMS"/>-->
-    <!--<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>-->
-    <!--闪光灯-->
+    <!-- 写入联系人，但不可读取 -->
+    <!-- <uses-permission android:name="android.permission.WRITE_CONTACTS" /> -->
+    <!-- 允许程序访问手机状态信息 -->
+    <!-- <uses-permission android:name="android.permission.READ_PHONE_STATE" /> -->
+    <!-- <uses-permission android:name="android.permission.RECEIVE_SMS"/> -->
+    <!-- <uses-permission android:name="android.permission.READ_SMS"/> -->
+    <!-- <uses-permission android:name="android.permission.SEND_SMS"/> -->
+    <!-- <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/> -->
+    <!-- 闪光灯 -->
     <uses-permission android:name="android.permission.FLASHLIGHT" />
-    <!--<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>-->
+    <!-- <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!--允许程序唤醒机器-->
+    <!-- 允许程序唤醒机器 -->
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
-    <!--sd卡-->
+    <!-- sd卡 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!--允许程序挂载和移除可移动存储设备-->
+    <!-- 允许程序挂载和移除可移动存储设备 -->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <uses-feature
@@ -79,24 +78,28 @@
         android:name="android.hardware.telephony"
         android:required="false" />
 
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:name=".n.base.BaseApplication"
         android:configChanges="locale|orientation|keyboardHidden"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <!-- server address -->
-        <!--<meta-data-->
-            <!--android:name="ServerAddress"-->
-            <!--android:value="${NICELY_VALUE}" />-->
 
-        <!--&lt;!&ndash; your vid getString must "\ " &ndash;&gt;-->
-        <!--<meta-data-->
-            <!--android:name="vid"-->
-            <!--android:value="${VID}" />-->
-        <!--<meta-data-->
-            <!--android:name="vkey"-->
-            <!--android:value="${VKEY}" />-->
+        <!-- server address -->
+        <!-- <meta-data -->
+        <!-- android:name="ServerAddress" -->
+        <!-- android:value="${NICELY_VALUE}" /> -->
+
+
+        <!-- &lt;!&ndash; your vid getString must "\ " &ndash;&gt; -->
+        <!-- <meta-data -->
+        <!-- android:name="vid" -->
+        <!-- android:value="${VID}" /> -->
+        <!-- <meta-data -->
+        <!-- android:name="vkey" -->
+        <!-- android:value="${VKEY}" /> -->
 
         <activity
             android:name=".SmartcallActivity"
@@ -277,15 +280,15 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+                <!-- <category android:name="android.intent.category.LAUNCHER"/> -->
             </intent-filter>
         </activity>
-
         <activity
             android:name=".n.view.cloud.CloudLiveCallActivity"
             android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan|stateHidden" />
+        <activity android:name=".n.view.bell.BellRecordDetailActivity"></activity>
     </application>
 
 </manifest>
