--- a/app/build.gradle
+++ b/app/build.gradle
@@ -236,8 +236,8 @@ dependencies {
     //渠道包
     compile 'com.mcxiaoke.gradle:packer-helper:1.0.8'
 
-    compile('com.twitter.sdk.android:twitter:2.3.1@aar') {
-        transitive = true;
-    }
+//    compile('com.twitter.sdk.android:twitter:2.3.1@aar') {
+//        transitive = true;
+//    }
 }
 
