--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,7 +86,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value=""/>
 
+        <meta-data
+            android:name="com.crashlytics.ApiKey"
+            android:value="00000000" />
         <!-- server address -->
         <!-- <meta-data -->
         <!-- android:name="ServerAddress" -->
@@ -288,7 +292,15 @@
             android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan|stateHidden" />
-        <activity android:name=".n.view.bell.BellRecordDetailActivity"></activity>
+        <activity android:name=".n.view.bell.BellRecordDetailActivity"
+            android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan|stateHidden"
+            />
+
+        <provider android:authorities="com.facebook.app.FacebookContentProvider1234"
+            android:name="com.facebook.FacebookContentProvider"
+            android:exported="true" />
     </application>
 
 </manifest>
