--- a/app/build.gradle
+++ b/app/build.gradle
@@ -216,17 +216,18 @@ dependencies {
 //    compile project(':annotation')
 //    compile project(':compiler')
 
+    //    https://github.com/cylankj/JFGAndroid-Ext.git
+    //
+    //渠道包
     compile 'com.danikula:videocache:2.6.4'
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.5'
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.5'
-//    https://github.com/cylankj/JFGAndroid-Ext.git
     compile 'com.cylan.ext:annotations:0.1.0'
+    compile 'com.mcxiaoke.gradle:packer-helper:1.0.8'
+    compile 'com.android.support:support-v4:23.4.0'
     annotationProcessor 'com.cylan.ext:processor:0.1.0'
-    //
     debugCompile 'com.cylan.ext:optdebug:0.0.1'
     releaseCompile 'com.cylan.ext:optrelease:0.0.1'
-    //渠道包
-    compile 'com.mcxiaoke.gradle:packer-helper:1.0.8'
 }
 
