--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 //多渠道包
@@ -239,5 +248,9 @@ dependencies {
     compile('com.twitter.sdk.android:twitter:2.3.1@aar') {
         transitive = true;
     }
+    compile('com.twitter.sdk.android:tweet-composer:2.3.1@aar') {
+        transitive = true;
+    }
+
 }
 
