--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,7 +78,7 @@
         android:name="android.hardware.telephony"
         android:required="false" />
 
-    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:name=".n.base.BaseApplication"
@@ -86,11 +86,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
-
         <meta-data
-            android:name="com.crashlytics.ApiKey"
-            android:value="00000000" />
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="1b07d38c7ce2fec4e83c1774cb9f7f262d07b782"
+            />
         <!-- server address -->
         <!-- <meta-data -->
         <!-- android:name="ServerAddress" -->
@@ -198,7 +200,7 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
-            android:windowSoftInputMode="adjustPan|stateHidden" >
+            android:windowSoftInputMode="adjustPan|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -299,14 +301,15 @@
             android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan|stateHidden" />
-        <activity android:name=".n.view.bell.BellRecordDetailActivity"
+        <activity
+            android:name=".n.view.bell.BellRecordDetailActivity"
             android:configChanges="locale|orientation|keyboardHidden|navigation|screenSize"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustPan|stateHidden"
-            />
+            android:windowSoftInputMode="adjustPan|stateHidden" />
 
-        <provider android:authorities="com.facebook.app.FacebookContentProvider1866682200216878"
+        <provider
             android:name="com.facebook.FacebookContentProvider"
+            android:authorities="com.facebook.app.FacebookContentProvider1866682200216878"
             android:exported="true" />
     </application>
 
