给测试打包

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -206,6 +206,7 @@ dependencies {
     compile files('libs/libammsdk-3.1.1.jar')
     //其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.2.0
     compile rootProject.ext.buglyNdk
+    compile rootProject.ext.buglySdk
     debugCompile rootProject.ext.leakcanaryAndroid
     releaseCompile rootProject.ext.leakcanaryAndroidNoOp
     testCompile rootProject.ext.leakcanaryAndroidNoOp
