--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -288,6 +288,13 @@
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan|stateHidden" />
 
+        <activity android:name=".n.view.bell.BellRecordDetailActivity"
+            android:configChanges="locale|orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/CamActivityTheme"
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
+
+
         <activity
             android:name="com.facebook.FacebookActivity"
             android:exported="true"
