--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,7 +151,7 @@ android {
 
 
 repositories {
-    maven { url 'https://maven.fabric.io/public' }
+//    maven { url 'https://maven.fabric.io/public' }
     flatDir {
         dirs 'libs'
     }
