--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     repositories {
         jcenter()
-        maven { url 'https://maven.fabric.io/public' }
+//        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
 //        classpath 'com.android.tools.build:gradle:2.2.0-alpha1'
@@ -17,7 +17,7 @@ buildscript {
         classpath 'me.tatarka:gradle-retrolambda:3.4.0'
         //多渠道包
         classpath 'com.mcxiaoke.gradle:packer-ng:1.0.8'
-        classpath 'io.fabric.tools:gradle:1.+'
+//        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
