--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,12 +133,13 @@ android {
 
 
     productFlavors {
-
-        _yun {
-            //vid vkey已经搬到Security.java
-            //官方运营
-            versionName vName
-            versionCode vCode
+        if (isInJenkins()) {//打包平台才运行
+            _yun {
+                //vid vkey已经搬到Security.java
+                //官方运营
+                versionName vName
+                versionCode vCode
+            }
         }
         _yf {
             applicationIdSuffix ".yf"
@@ -150,11 +151,12 @@ android {
             versionName vName
             versionCode vCode
         }
-        //中性包
-        _zhongxing {
-            applicationIdSuffix ".zhongxing"
-            versionName vName
-            versionCode vCode
+        if (isInJenkins()) {        //中性包
+            _zhongxing {
+                applicationIdSuffix ".zhongxing"
+                versionName vName
+                versionCode vCode
+            }
         }
     }
 }
