暂停使用混淆

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,10 +120,10 @@ android {
         }
         release {
             if (hasSignKey()) {
-                shrinkResources true
-                minifyEnabled true
-                zipAlignEnabled true
-                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//                shrinkResources true
+//                minifyEnabled true
+//                zipAlignEnabled true
+//                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
                 signingConfig signingConfigs.release
             }
         }
