--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,6 @@ ext {
     leakcanaryAndroid = 'com.squareup.leakcanary:leakcanary-android:1.5'
     leakcanaryAndroidNoOp = 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     leakcanaryAndroidNoOp = 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    cySdk = 'JFGLibrary-release'
+    cySdk = 'JfgAndroidSDK-3.0.159'
     facebookSDK='facebook-android-sdk-4.19.0'
 }
