我的分支合并代码

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,7 +146,7 @@ android {
 
 
 repositories {
-    maven { url 'https://maven.fabric.io/public' }
+//    maven { url 'https://maven.fabric.io/public' }
     flatDir {
         dirs 'libs'
     }
