--- a/app/build.gradle
+++ b/app/build.gradle
@@ -248,6 +248,6 @@ dependencies {
     compile(name: rootProject.ext.facebookSDK, ext: 'aar') {
         transitive = true
     }
-    compile 'fr.avianey:bolts-android-api:1+'
+//    compile 'fr.avianey:bolts-android-api:1+'
 }
 
