--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,10 @@ android {
     signingConfigs {
         debug {
             v2SigningEnabled false
+            storeFile file('../debug.keystore')
+            storePassword 'android'
+            keyAlias 'AndroidDebugKey'
+            keyPassword 'android'
         }
         release {
             // 满足下面两个条件时需要此配置
