--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,12 @@
     <!-- <uses-permission android:name="android.permission.READ_SMS"/> -->
     <!-- <uses-permission android:name="android.permission.SEND_SMS"/> -->
     <!-- <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/> -->
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <!-- 闪光灯 -->
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <!-- 位置信息 -->
@@ -85,6 +91,19 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+        <!--华为推送 Start-->
+        <meta-data
+            android:name="com.huawei.hms.client.appid"
+            android:value="10826402" />
+
+        <provider
+            android:name="com.huawei.hms.update.provider.UpdateProvider"
+            android:authorities="com.cylan.jiafeigou.yf.hms.update.provider"
+            android:exported="false"
+            android:grantUriPermissions="true" />
+        <!--华为推送 End-->
+
         <!-- server address -->
         <!-- <meta-data -->
         <!-- android:name="ServerAddress" -->
@@ -314,6 +333,47 @@
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
             android:windowSoftInputMode="adjustPan|stateHidden" />
+
+
+        <!--进程保活 Start-->
+        <service
+            android:name=".DaemonService1"
+            android:process=":process1" />
+        <receiver
+            android:name=".DaemonReceiver1"
+            android:process=":process1" />
+        <service
+            android:name=".DaemonService2"
+            android:process=":process2" />
+
+        <receiver
+            android:name=".DaemonReceiver2"
+            android:process=":process2" />
+        <!--进程保活 End-->
+
+        <receiver android:name=".push.HuaweiPushReceiver">
+            <intent-filter>
+                <!-- 必须,用于接收token -->
+                <action android:name="com.huawei.android.push.intent.REGISTRATION" /> <!-- 必须，用于接收消息 -->
+                <action android:name="com.huawei.android.push.intent.RECEIVE" />
+                <!-- 可选，用于点击通知栏或通知栏上的按钮后触发onEvent回调 -->
+                <action android:name="com.huawei.android.push.intent.CLICK" />
+                <!-- 可选，查看push通道是否连接，不查看则不需要 -->
+                <action android:name="com.huawei.intent.action.PUSH_STATE" />
+            </intent-filter>
+            <meta-data
+                android:name="CS_cloud_ablitity"
+                android:value="@string/hwpush_ability_value" />
+        </receiver>
+
+
+        <receiver android:name="com.huawei.hms.support.api.push.PushEventReceiver">
+
+            <intent-filter>
+                <!-- 接收通道发来的通知栏消息，兼容老版本Push -->
+                <action android:name="com.huawei.intent.action.PUSH" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
