--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Sets the minimum version of CMake required to build the native
-# library. You should either keep the default value or only pass a
-# value of 3.4.0 or lower.
+# library. You should either keep the default packValue or only pass a
+# packValue of 3.4.0 or lower.
 
 cmake_minimum_required(VERSION 3.4.1)
 
