--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,8 +54,8 @@
     <!-- <uses-permission android:name="android.permission.READ_PHONE_STATE" /> -->
     <!-- <uses-permission android:name="android.permission.RECEIVE_SMS"/> -->
     <!-- <uses-permission android:name="android.permission.READ_SMS"/> -->
-    <!-- <uses-permission android:name="android.permission.SEND_SMS"/> -->
-    <!-- <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/> -->
+     <uses-permission android:name="android.permission.SEND_SMS"/>
+     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
     <!-- 闪光灯 -->
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <!-- 位置信息 -->
