--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <!-- 允许程序不通过拨号界面拨打电话 -->
-    <!-- <uses-permission android:name="android.permission.CALL_PHONE" /> -->
+     <uses-permission android:name="android.permission.CALL_PHONE" />
     <!-- 允许程序读取用户联系人数据 -->
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <!-- 写入联系人，但不可读取 -->
