去掉多余注解

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -257,6 +257,6 @@ dependencies {
     compile(name: rootProject.ext.cySdk, ext: 'aar')
     //aar通用依赖，不需要指定名字
 
-    compile 'org.jetbrains:annotations:15.0'
+//    compile 'org.jetbrains:annotations:15.0'
 }
 
