--- a/app/build.gradle
+++ b/app/build.gradle
@@ -245,7 +245,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'org.greenrobot:greendao:3.2.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.1'
+//    compile 'com.android.support.constraint:constraint-layout:1.0.1'
 
     //aar通用依赖，不需要指定名字
     compile files('libs/open_sdk_r5781.jar')
